--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,47 +1,65 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body class="layout-reverse sidebar-overlay theme-base-13">
+  {%comment%}
+  {% include sidebar.html %}
+  {%endcomment%}
 
-    {% include sidebar.html %}
+  <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+  content to avoid any CSS collisions with our real content. -->
+  <div class="wrap">
+    <div class="masthead">
+      <div class="container clearfix">
 
-    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
-         content to avoid any CSS collisions with our real content. -->
-    <div class="wrap">
-      <div class="masthead">
-        <div class="container">
-          <h3 class="masthead-title">
-            <a href="/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
-          </h3>
-        </div>
+        <h2 class="masthead-title pull-left">
+          <a href="/" title="Home">{{ site.title }}</a>
+          <small>{{ site.tagline }}</small>
+        </h2>
+
+        <a class="pull-right nav-item" href="/about">Hakkımda</a>
       </div>
 
-      <div class="container content">
-        {{ content }}
+      <div class="hero">
       </div>
+
     </div>
 
+
+    <div class="container content">
+      {{ content }}
+    </div>
+  </div>
+
+  <div class="footer" style="background-image: url(/public/images/bg/basel.jpg);">
+
+      {% include footer.html %}
+
+  </div>
+
+  {% comment %}
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
     <script>
-      (function(document) {
-        var toggle = document.querySelector('.sidebar-toggle');
-        var sidebar = document.querySelector('#sidebar');
-        var checkbox = document.querySelector('#sidebar-checkbox');
+    (function(document) {
+      var toggle = document.querySelector('.sidebar-toggle');
+      var sidebar = document.querySelector('#sidebar');
+      var checkbox = document.querySelector('#sidebar-checkbox');
 
-        document.addEventListener('click', function(e) {
-          var target = e.target;
+      document.addEventListener('click', function(e) {
+        var target = e.target;
 
-          if(!checkbox.checked ||
-             sidebar.contains(target) ||
-             (target === checkbox || target === toggle)) return;
+        if(!checkbox.checked ||
+          sidebar.contains(target) ||
+          (target === checkbox || target === toggle)) return;
 
           checkbox.checked = false;
         }, false);
       })(document);
-    </script>
-  </body>
+      </script>
+    -->
+  {% endcomment %}
+</body>
 </html>
