--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,18 @@
 ---
 layout: default
 ---
-
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date when">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
 
+<div class="comment">
+<div id="disqus_thread" aria-live="polite">
+  {% include disqus.html %}
+</div>
+</div>
+<!---
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
@@ -23,3 +28,4 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+-->
