--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -50,7 +50,7 @@ body {
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.7;
 }
 @media (min-width: 38em) {
   html {
@@ -59,7 +59,10 @@ html {
 }
 
 body {
+  /*
   color: #515151;
+  */
+  color: #333;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
