--- a/public/css/style.css
+++ b/public/css/style.css
@@ -547,7 +547,7 @@ input[type="button"].btn-block {
   box-shadow: inset 0 0 15px rgba(0,0,0,.5);
 }
 .masthead {
-  padding-top:    1rem;
+  /* padding-top:    1rem; */
   padding-bottom: 1rem;
   margin: 55px 0 25px 0 !important;
   border-bottom: none !important;
