--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,15 @@ layout: default
       Yazıyı Tweet At</a>
   </center>
 
+<div class="navigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
+</div>
+
 <div class="comment">
 <div id="disqus_thread" aria-live="polite">
   {% include disqus.html %}
