--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -54,7 +54,7 @@ html {
 }
 @media (min-width: 38em) {
   html {
-    font-size: 20px;
+    font-size: 19px;
   }
 }
 
@@ -62,8 +62,8 @@ body {
   /*
   color: #515151;
   */
-  color: #333;
-  background-color: #fff;
+  color: black;
+  background-color: #fefefe;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
