--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,14 +9,20 @@ layout: default
   {{ content }}
 </div>
 
-  <center>
-    <a class="twitter-share-button"
-       href="https://twitter.com/intent/tweet?text={{ page.title }} - {{ site.url }}{{ page.url }}"
-       data-size="large" data-count="none">
-      Yazıyı Tweet At</a>
-  </center>
+<div id="post-meta" class="clearfix">
+  <a href="http://twitter.com/askngdk">
+    <img class="avatar" src="/public/images/askn-post-mini.jpg">
+    <div>
+      <span><b>Aşkın Gedik</b></span> <span>Ruby on Rails Developer</span>
+    </div>
+  </a>
 
-<div class="navigation">
+  <section id="sharing">
+    <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text={{ page.title }} via @askngdk" data-size="large" data-count="none"> Yazıyı Tweet At</a>
+  </section>
+</div>
+
+<div class="navigation clearfix">
   {% if page.previous.url %}
     <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
   {% endif %}
@@ -26,41 +32,41 @@ layout: default
 </div>
 
 <div class="comment">
-<div id="disqus_thread" aria-live="polite">
-  {% include disqus.html %}
-</div>
+  <div id="disqus_thread" aria-live="polite">
+    {% include disqus.html %}
+  </div>
 </div>
 <!---
-<div class="related">
+  <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ site.baseurl }}{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
-    {% endfor %}
+  {% for post in site.related_posts limit:3 %}
+  <li>
+  <h3>
+  <a href="{{ site.baseurl }}{{ post.url }}">
+  {{ post.title }}
+  <small>{{ post.date | date_to_string }}</small>
+  </a>
+  </h3>
+  </li>
+  {% endfor %}
   </ul>
-</div>
+  </div>
 -->
 
 <script>window.twttr = (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0],
-  t = window.twttr || {};
-  if (d.getElementById(id)) return t;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
+var js, fjs = d.getElementsByTagName(s)[0],
+t = window.twttr || {};
+if (d.getElementById(id)) return t;
+js = d.createElement(s);
+js.id = id;
+js.src = "https://platform.twitter.com/widgets.js";
+fjs.parentNode.insertBefore(js, fjs);
 
-  t._e = [];
-  t.ready = function(f) {
-    t._e.push(f);
-  };
+t._e = [];
+t.ready = function(f) {
+  t._e.push(f);
+};
 
-  return t;
+return t;
 }(document, "script", "twitter-wjs"));</script>
