--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -300,7 +300,7 @@ a.sidebar-nav-item:focus {
 
 .page,
 .post {
-  margin-bottom: 4em;
+  /* margin-bottom: 4em; */
 }
 
 /* Blog post or page title */
