--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -333,7 +333,7 @@ tbody tr:nth-child(odd) th {
 
 .page,
 .post {
-  margin-bottom: 4em;
+  /* margin-bottom: 4em; */
 }
 
 /* Blog post or page title */
