--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <div class="post">
   <!-- <h1 class="post-title">{{ page.title }}</h1> -->
-  <div class="clearfix">
+  <!-- <div class="clearfix">
     <span class="post-date when pull-right ">{{ page.date | date_to_string }}</span>
-  </div>
+  </div> -->
   {{ content }}
 </div>
 
