--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/lanyon.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/bootstrap.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/style.css">
 
   <!-- Icons -->
