--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,10 @@
 ---
 layout: default
 ---
+
 <div class="post">
+  <small class="pdate">{{ page.date | date_to_string }}</small>
+
   <!-- <h1 class="post-title">{{ page.title }}</h1> -->
   <!-- <div class="clearfix">
     <span class="post-date when pull-right ">{{ page.date | date_to_string }}</span>
