--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,6 @@
   font
 }
 
-/* .my-li { */
-/*   border-bottom: 1px solid #e5e5e5 */
-/* } */
-
 .listing {
   padding: 0;
 }
@@ -100,23 +96,15 @@ a:hover {
   background-size: contain;
   background-position: center center;
   z-index: 1;
-  height: 300px;
   margin-bottom: 0rem;
-  /*box-shadow: inset 0 0 15px rgba(0,0,0,.5);*/
-}
-.masthead {
-  padding-top: 0px !important;
-  /*padding-bottom: 1rem;*/
-  padding-bottom: 0px !important;
 
-  margin: 0px 0 0px 0 !important;
-  border-bottom: none !important;
+  min-height: 140px;
 }
 
-.masthead-title {
-  text-align: center;
-  padding-top: 120px;
-  letter-spacing: 0px;
+@media (min-width: 56em) {
+  .hero {
+    height: 300px;
+  }
 }
 
 .pdate {
@@ -132,19 +120,46 @@ a:hover {
   letter-spacing: -.025rem;
 }
 
+.masthead {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+
+  margin: 0px 0 0px 0 !important;
+  border-bottom: none !important;
+}
+
+.masthead-title {
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  letter-spacing: 0px;
+}
+
 .masthead-title > a {
   font-weight: bold;
   text-align: center;
-  /* background: #F6DF6A;
-  background: #40c4ff;
-  background: rgba(0,0,0,0.6); */
   background: #ffba00;
   color: white;
-  padding: 10px 30px;
-  font-size: 2em;
   text-decoration: none;
   margin-bottom: .5rem;
   text-rendering: optimizeLegibility;
+
+  padding: 10px;
+  font-size: 1.5em;
+  display: block;
+}
+
+@media (min-width: 56em) {
+  .masthead-title {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .masthead-title > a {
+    padding: 10px 30px;
+    font-size: 2em;
+    display: inline;
+  }
 }
 
 .masthead > .container {
@@ -178,17 +193,35 @@ a:hover {
 }
 
 .navigation .prev {
-    float: left;
     border-bottom: 3px solid #ffba00;
     padding: 3px 5px;
     display: block;
+    max-width: 50%;
+    float: left;
 }
 
 .navigation .next {
-    float: right;
     border-bottom: 3px solid #ffba00;
     padding: 3px 5px;
     display: block;
+    max-width: 50%;
+    float: right;
+}
+
+@media (min-width: 56em) {
+  .navigation .prev {
+      float: left;
+      border-bottom: 3px solid #ffba00;
+      padding: 3px 5px;
+      display: block;
+  }
+
+  .navigation .next {
+      float: right;
+      border-bottom: 3px solid #ffba00;
+      padding: 3px 5px;
+      display: block;
+  }
 }
 
 #post-meta {
@@ -284,8 +317,8 @@ html {
 
 .content {
   padding-top: 20px;
-  padding-right: 30px;
-  padding-left: 30px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 @media (min-width: 56em) {
@@ -298,5 +331,7 @@ html {
   .content {
     float: left;
     width: 70%;
+    padding-right: 30px;
+    padding-left: 30px;
   }
 }
