add image to sidebar

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 
 <div id="post-meta" class="clearfix">
   <a href="http://twitter.com/askngdk">
-    <img class="avatar" src="/public/images/askn-post-mini.jpg">
+    <img class="avatar" src="/public/images/ben.jpg">
     <div>
       <span><b>Aşkın Gedik</b></span> <span>Ruby on Rails Developer</span>
     </div>
