--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,18 +21,21 @@
     </div>
 
     <div class="side">
-      <div class="side-title">Aşkın GEDİK</div>
       <p>
+        <img src="/public/images/ben.jpg">
+      </p>
+      <p>
+        Ben Aşkın,
         <a href="http://www.protel.com.tr/">Protel Teknoloji Çözümleri</a>nde yazılım geliştirme takım lideri olarak çalışıyorum.
       </p>
       <p>
         Benimle ilgili daha fazla bilgiyi
-        <a href="/about">hakkımda</a> sayfasına göz atarak öğrenebilir
+        <a href="/about">hakkımda</a> sayfasına göz atarak
         veya <a href="https://twitter.com/askngdk">Twitter</a>,
         <a href="https://www.facebook.com/askngdk">Facebook</a>,
         <a href="http://github.com/askn">Github</a> ve
         <a href="https://plus.google.com/u/0/101664352366673735839/posts">Gplus</a> üzerinden takip
-        edebilirsiniz.
+        ederek öğrenebilirsiniz.
     </p>
 
     <div>
