--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,21 +7,25 @@
   <div class="wrap">
     <div class="masthead">
 
-      <div class="hero">
+      <div class="banner" style="{% if page.style %}{{ page.style }}{% endif %}">
         <div class="masthead-title">
           <a href="/" title="Home">{{ page.title }}</a>
         </div>
       </div>
     </div>
 
-
     <div class="ww container">
+      <div class="mobile-menu clearfix">
+        <a href="/" class="nav-item" >Anasayfa</a>
+        <a class="nav-item" href="/about">Hakkımda</a>
+      </div>
+
     <div class="content">
       {{ content }}
     </div>
 
     <div class="side">
-      <p>
+      <p class="me">
         <img src="/public/images/ben.jpg">
       </p>
       <p>
@@ -36,8 +40,7 @@
         <a href="http://github.com/askn">Github</a> ve
         <a href="https://plus.google.com/u/0/101664352366673735839/posts">Gplus</a> üzerinden takip
         ederek öğrenebilirsiniz.
-    </p>
-
+      </p>
     <div>
   </div>
 
