--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
   </a>
 
   <section id="sharing">
-    <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text={{ page.title }} via @askngdk {{ page.url | absolute_url }}" data-size="large" data-count="none"> Yazıyı Tweet At</a>
+    <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text={{ page.title }} via @askngdk {{ page.url | absolute_url }}" data-size="large" data-count="none">Paylaş</a>
   </section>
 </div>
 
