--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,15 +30,13 @@
       </p>
       <p>
         Ben Aşkın,
-        <a href="http://www.protel.com.tr/">Protel Teknoloji Çözümleri</a>nde yazılım geliştirme takım lideri olarak çalışıyorum.
       </p>
       <p>
         Benimle ilgili daha fazla bilgiyi
         <a href="/about">hakkımda</a> sayfasına göz atarak
         veya <a href="https://twitter.com/askngdk">Twitter</a>,
-        <a href="https://www.facebook.com/askngdk">Facebook</a>,
-        <a href="http://github.com/askn">Github</a> ve
-        <a href="https://plus.google.com/u/0/101664352366673735839/posts">Gplus</a> üzerinden takip
+        <a href="https://www.facebook.com/askngdk">Facebook</a> ve
+        <a href="http://github.com/askn">Github</a> üzerinden takip
         ederek öğrenebilirsiniz.
       </p>
     <div>
