--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
     <div>
       <b>Aşkın Gedik</b>
       <br />
-      Ruby on Rails Developer
+      Software Engineer
     </div>
   </a>
 
